# Similari

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml  test.py
.cargo/: config  config.toml
.github/workflows/: build.yml  docker-build.yml  docker-maturin-python-3_10.yml  docker-maturin-python-3_11.yml  docker-maturin-python-3_8.yml  docker-maturin-python-3_9.yml  docker-maturin-rust-1_62.yml  docker-maturin-rust-1_63.yml  docker-maturin-rust-1_64.yml  docker-maturin-rust-1_65.yml  docker-maturin-rust-1_66.yml  docker-maturin-rust-1_67.yml  docker-maturin.yml  docker-publish.yml  maturin.yml  rust.yml
assets/benchmarks/: benchmarks.md
assets/documentation/python/: api.md
benches/: batch_sort_iou_tracker.rs  batch_sort_maha_tracker.rs  bbox_own_areas.rs  feature_tracker.rs  iou_tracker.rs  kalman.rs  kalman_2d_point.rs  kalman_bbox.rs  nms.rs  nms_benchmark.rs  nms_benchmark_oriented.rs  nms_oriented.rs  ops.rs  simple_search.rs  simple_sort_iou_tracker.rs  simple_sort_iou_tracker_oriented.rs  simple_sort_iuo_tracker_oriented.rs  simple_sort_maha_tracker.rs  simple_sort_maha_tracker_oriented.rs  simple_sort_tracker.rs  simple_sort_tracker_oriented.rs  simple_sort_tracker_rotated.rs  simple_visual_sort_iou_tracker.rs  simple_visual_sort_tracker.rs  track_search.rs
docker/: Dockerfile.manylinux_2_28_ARM64  Dockerfile.manylinux_2_28_X64  build-manylinux.sh
docker/common/: install-basic-deps.sh
docker/python_3.10/: Dockerfile
docker/python_3.11/: Dockerfile
docker/python_3.11-rc/: Dockerfile
docker/python_3.8/: Dockerfile
docker/python_3.9/: Dockerfile
docker/rust_1.63/: Dockerfile
docker/rust_1.64/: Dockerfile
docker/rust_1.65/: Dockerfile
docker/rust_1.66/: Dockerfile
docker/rust_1.67/: Dockerfile
examples/: batch_sort_iou_tracker.rs  incremental_track_build.rs  iou_tracker.rs  middleware_sort_tracker.rs  simple.rs  simple_sort_iou_tracker.rs  simple_sort_iou_tracker_oriented.rs  simple_sort_maha_tracker.rs  simple_sort_maha_tracker_oriented.rs  simple_sort_tracker.rs  simple_sort_tracker_rotated.rs  sort_tracker.rs  track_merge.rs  track_merging.rs  tracking.rs
python/: Dockerfile  batch_sort_iou.py  batch_visual_sort.py  bb.py  clipping_intersection.py  kalman.py  kalman_2d_point.py  kalman_2d_vec.py  kalman_bbox.py  nms.py  sort_iou.py  sort_iou_bench.py  sort_iou_rotated.py  sort_iou_scene_id.py  sort_maha.py  visual_sort.py
python/bugfixes/: github-84.py
python/bugfixes/bug_vs_1/: bug_visual_sort.py
python/motchallenge/: Dockerfile  README.md  __main__.py  config.py  config.yml  evaluator.py  requirements.txt  trackers.py  utils.py
python/motchallenge/confs/: original-sort-config.yml  similari-maha-sort-config.yml
python/sort/: batch_sort_iou.py  batch_sort_iou_bench.py  sort_idle.py  sort_iou.py  sort_iou_bench.py  sort_iou_rotated.py  sort_iou_scene_id.py  sort_maha.py
python/visual_sort/: visual_sort.py
src/: distance.rs  examples.rs  lib.rs  prelude.rs  py.rs  simd.rs  test_stuff.rs  track.rs  trackers.rs  utils.rs
src/examples/: iou.rs
src/test_stuff/: iou.rs
src/track/: builder.rs  notify.rs  store.rs  utils.rs  voting.rs
src/track/store/: builder.rs  store_tests.rs  tests.rs  track_distance.rs
src/track/voting/: best.rs  topn.rs
src/trackers/: batch.rs  epoch_db.rs  kalman_prediction.rs  keypoint_mm_2d.rs  sort.rs  spatio_temporal_constraints.rs  tracker_api.rs  visual.rs  visual_sort.rs
src/trackers/kalman_prediction/: keypoint_vector.rs  universal_2d_box.rs
src/trackers/sort/: batch_api.rs  iou.rs  maha.rs  metric.rs  simple.rs  simple_api.rs  simple_iou.rs  simple_maha.rs  sort_py.rs  tracker.rs  voting.rs
src/trackers/visual/: deep_sort.rs  metric.rs  metric_impl.rs  observation_attributes.rs  simple_api.rs  simple_visual.rs  track_attributes.rs  visual_py.rs  voting.rs
src/utils/: bbox.rs  clipping.rs  kalman.rs  kalman_2d_vec.rs  kalman_bbox.rs  linear_sum_assignment.rs  nms.rs  point.rs  point_2d.rs  primitive.rs
(+37 files in other folders)
