[package]
name = "similari"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "Vector similarity search engine library"
homepage = "https://github.com/insight-platform/Similari"
repository = "https://github.com/insight-platform/Similari"
readme = "README.md"
keywords = ["machine-learning", "similarity"]
categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
version = "0.2.4"
edition = "2021"
license="Apache-2.0"

[dependencies]
nalgebra = "0.31.0"
rayon = "1.5.3"
itertools = "0.10.3"
anyhow = "1.0.58"
thiserror = "1.0.31"

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

