[package]
name = "similari"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "Vector similarity search engine library"
homepage = "https://github.com/insight-platform/Similari"
repository = "https://github.com/insight-platform/Similari"
readme = "README.md"
keywords = ["machine-learning", "similarity"]
categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
version = "0.4.3"
edition = "2021"
license="Apache-2.0"
rust-version = "1.62"

[dependencies]
itertools = "0.10.3"
anyhow = "1.0.58"
thiserror = "1.0.31"
once_cell = "1.12.0"
num_cpus = "1.13.1"
ultraviolet = "0.9.0"
crossbeam = "0.8.1"

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3